@@ -1,5 +1,9 @@
-1.0
+0.9.1
 + Screenshots (a la gsnapshot) (gtk.gdk.Pixbuf.get_from_drawable)
++ Improve saturation dialog
++ Location of thumbpane
+
+1.0
 + Allow zooming in crop dialog (default to same view as main window so that
   the user can essentially 'crop visible' by clicking ok right away?)
 + why is light/dark grey no longer used for transparency? (argh)
