@@ -1,6 +1,7 @@
 v0.9.1 - Pending
 	+ Bug: Fix .desktop file category
 	+ Bug: Ctrl+mousewheel doesn't zoom when caps/num lock is on
+	+ Bug: Fix horizontal centering of image
 
 v0.9 - October 18, 2007
 	+ Thumbnails pane (freedesktop spec compliant using ~/.thumbnails)
